--- a/开发备忘录.md
+++ b/开发备忘录.md
@@ -75,8 +75,15 @@ mapOp主要发两个东西 一个是/lio_sam/mapping/odometry  这个是后面im
 现在的问题在于 我们在cartograoher里给radar和imu 是能跑的   那么问题在于 一 外参标定 二 imu的origin（这个是cartographer不需要的部分）
 现在问题 自我评估认为外参标定基本只是个单位阵 那么更有可能的问题在于origin
 
-#### 现在的问题
-* **`gps`**
+#### TODO
+* **`前端`**
+    本来用于激光时，是loam方法，但现在我们粗暴的使用icp（最终icp也并没有收敛），这种方法还是不太对，考虑使用所谓 Yeti open source
+
+* **`后端`**
+    not
+
+* **`回环`**
+    现在使用的是ScanContext，但是这一方法好像可以根据毫米波的特性进行优化，考虑这方面的改进
 
 
 
